force-app/main/default/objects/Contrato__c/fields/Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiario</label>
    <referenceTo>Beneficiario__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>