force-app/main/default/objects/Contrato__c/fields/Contratista_del__c.field-meta.xml
<CustomField>
    <fullName>Contratista_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contratista</label>
    <referenceTo>Contratista__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos_del</relationshipName>
    <type>Lookup</type>
</CustomField>