force-app/main/default/objects/Contrato__c/fields/Endoso__c.field-meta.xml
<CustomField>
    <fullName>Endoso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endoso</label>
    <referenceTo>Endoso__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>