force-app/main/default/objects/Contrato__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <formula>IF(
    TODAY() &lt;=  Fin_de_Contrato__c ,
    &quot;En plazo&quot;,
    &quot;Vencido&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus</label>
    <type>Text</type>
</CustomField>