force-app/main/default/objects/Contrato__c/fields/Exposici0n_del__c.field-meta.xml
<CustomField>
    <fullName>Exposici0n_del__c</fullName>
    <formula>00Nct000002ETVd / Valor_Contrato__c</formula>
    <label>Exposición</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>