force-app/main/default/objects/Contrato__c/fields/Fin_Contrato_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Fin_Contrato_Vigente__c</fullName>
    <description>Se actualiza cuando hay convenios modificatorios que extienden el plazo</description>
    <label>Fin de contrato (vigente)</label>
    <type>Date</type>
</CustomField>