force-app/main/default/objects/Contrato__c/fields/Fin_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Fin_de_Contrato__c</fullName>
    <label>Fin de Contrato</label>
    <type>Date</type>
</CustomField>