force-app/main/default/objects/Contrato__c/fields/Inicio_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_Contrato__c</fullName>
    <label>Inicio de Contrato</label>
    <type>Date</type>
</CustomField>