force-app/main/default/objects/Contrato__c/fields/Valor_Contrato_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Valor_Contrato_Vigente__c</fullName>
    <description>Se actualiza cuando hay convenios modificatorios que cambian el valor</description>
    <label>Valor del contrato (vigente)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>